--- a/src/main/webapp/app/entities/purchase/list/purchase.component.html
+++ b/src/main/webapp/app/entities/purchase/list/purchase.component.html
@@ -1,4 +1,149 @@
-<div>
+<div id="page-title">
+  <h3>Purchase List</h3>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <a routerLink="/purchase/new" class="btn btn-success btn-alt btn-xs" style="border-radius: 0px !important">
+      <i class="fa fa-plus"></i>
+      Create New Purchase
+    </a>
+
+    <a class="btn btn-primary btn-alt btn-xs pull-right" id="searchButton">
+      <i class="fa fa-search"></i>
+      Search
+    </a>
+
+    <input type="button" class="btn btn-alt bg-purple btn-xs" onclick="showSummary()" id="summaryBtn" value="Summary" />
+  </div>
+
+  <div class="panel-body">
+    <div id="summaryDiv" style="display: none">
+      <table style="width: 100%" class="table table-bordered">
+        <tbody>
+          <tr style="background-color: #f8f9f9; border: 1px solid #ddd">
+            <td style="text-align: right">
+              <b>Net Total :</b>
+            </td>
+            <td>DH 8000.00</td>
+          </tr>
+
+          <tr style="background-color: #f8f9f9; border: 2px solid #ddd">
+            <td style="text-align: right">
+              <b>Total Vat :</b>
+            </td>
+            <td>DH 0.00</td>
+          </tr>
+
+          <tr style="background-color: #f8f9f9; border: 1px solid #ddd">
+            <td style="text-align: right">
+              <b>Net Total :</b>
+            </td>
+            <td>DH 8000.00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="table-responsive" style="min-height: 250px" id="tableDIv">
+      <table class="table table-bordered table-striped">
+        <thead class="bg-gradient-9">
+          <tr>
+            <td class="text-center font-white">Date</td>
+            <td class="text-center font-white">Bill No</td>
+            <td class="text-center font-white">Supplier</td>
+            <td class="text-center font-white">Net Total</td>
+            <td class="text-center font-white">Paid</td>
+            <td class="text-center font-white">Actions</td>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let transaction of transactions; trackBy: trackId" data-cy="entityTable">
+            <td class="text-center tooltip-button" data-placement="bottom">
+              {{ transaction.date | formatMediumDatetime }}
+            </td>
+
+            <td class="text-center">
+              {{ transaction.referenceNo }}
+            </td>
+
+            <td class="text-center">
+              {{ transaction.person?.firstName + ' ' + transaction.person?.lastName }}
+            </td>
+
+            <td class="text-center">
+              {{ transaction.netTotal + ' DH' }}
+            </td>
+
+            <td class="text-center">
+              {{ transaction.paid + ' DH' }}
+            </td>
+
+            <td class="text-center">
+              <div class="btn-group">
+                <button
+                  type="button"
+                  class="btn btn-info btn-alt btn-xs dropdown-toggle"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Actions
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu pull-right">
+                  <li>
+                    <a href="http://localhost/intell/public/admin/purchase/details/5">
+                      <i class="fa fa-eye" style="color: #269fed"></i>
+                      Details
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_BLINK" href="http://localhost/intell/public/admin/purchase/5/invoice">
+                      <i class="fa fa-print" style="color: #edb426"></i>
+                      Bill
+                    </a>
+                  </li>
+
+                  <li>
+                    <!--purchase delete button trigger-->
+                    <a href="#" data-id="5" data-name="2021/08/P-0002" class="btn-delete">
+                      <i class="fa fa-trash" style="color: red"></i>
+                      Delete
+                    </a>
+                    <!--delete button trigger ends-->
+                  </li>
+
+                  <!-- <li>
+                    <a href="">
+                        <i class="fa fa-usd" style="color: #89108f;"></i>
+                        Payment
+                    </a>
+                </li> -->
+                </ul>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!--Pagination-->
+      <div class="row justify-content-center" style="text-align: center">
+        <ngb-pagination
+          [collectionSize]="totalItems"
+          [(page)]="ngbPaginationPage"
+          [pageSize]="itemsPerPage"
+          [maxSize]="5"
+          [rotate]="true"
+          [boundaryLinks]="true"
+          (pageChange)="loadPage($event)"
+        ></ngb-pagination>
+      </div>
+      <!--Ends-->
+    </div>
+  </div>
+</div>
+<!-- <div>
   <h2 id="page-heading" data-cy="PurchaseHeading">
     <span>Purchases</span>
 
@@ -120,3 +265,4 @@
     </div>
   </div>
 </div>
+ -->
